Add html template

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
 		<title>Vite App</title>
 	</head>
 	<body>
+		<div id="todo-app">
+			<header>
+				<h1>ToDo App</h1>
+			</header>
+			<div class="input-field">
+				<input type="text" />
+				<button class="add">Add</button>
+				<button class="clear">clear</button>
+			</div>
+			<div class="listOfThings">
+				<ul>
+					<li data-id="item1">wash a car
+						<button><i class="fa-solid fa-check"></i></button>
+						<button><i class="fa-solid fa-x"></i></button>
+						<button><i class="fa-solid fa-trash"></i></button>
+					</li>
+
+					<li data-id="item2">charge battery
+						<button><i class="fa-solid fa-check"></i></button>
+						<button><i class="fa-solid fa-x"></i></button>
+						<button><i class="fa-solid fa-trash"></i></button>
+					</li>
+
+					<li data-id="item3">go for a walk
+						<button><i class="fa-solid fa-check"></i></button>
+						<button><i class="fa-solid fa-x"></i></button>
+						<button><i class="fa-solid fa-trash"></i></button>
+					</li>
+					
+					
+				</ul>
+			</div>
+		</div>
 	
 		<script type="module" src="/main.js"></script>
 	</body>
